--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -73,7 +73,7 @@
         color: #969696;
         width: 100px;
     }
-    .zhy-privateWord,.zhy-leaveMessage{
+    .exbot-privateWord,.exbot-leaveMessage{
         padding: 30px 20px;
     }
     .successNoticeAlert{
