--- a/src/main/resources/templates/friendlylink.html
+++ b/src/main/resources/templates/friendlylink.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="am-topbar-right writing am-hide-md-down">
                     <a  href="/editor" target="_blank" style="text-decoration: none">
-                        <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                        <img class="am-circle" src="img/writing.png">
                         <span class="write-word">写博客</span>
                     </a>
                 </div>
@@ -74,20 +74,56 @@
     <div id="main">
         <div class="am-container">
 
-            <div>友情链接</div>
-            <div>
-                <p class="link-wrap">
-                    <a class="link-item" href="http://www.blackant.org/" target="_blank">黑蚂蚁机器人</a>
-                    <a class="link-item" href="http://www.robobk.com/" target="_blank">机智机器人团队</a>
-                    <a class="link-item" href="http://www.diy-robots.com/" rel="colleague" target="_blank">动力老男孩的博客</a>
-                    <a class="link-item" href="http://blog.csdn.net/hcx25909" rel="friend" target="_blank">古月居</a>
-                    <a class="link-item" href="https://ioteams.com/mechanical">机器革命</a>
-                    <a class="link-item" href="http://zhainan.org/" rel="contact" target="_blank">I'm 宅男</a>
-                    <a class="link-item" href="http://www.yfworld.com/" rel="colleague" target="_blank">云飞机器人实验室</a>
-                    <a class="link-item" href="http://yukunlin.com.cn/">我思故我在</a>
-                    <a class="link-item" href="http://www.csksoft.net/blog/" rel="colleague" target="_blank">CSK.Blog</a>
-                    <a class="link-item" href="http://blog.exbot.net/link" title="友情链接">更多链接</a>
-                </p>
+            <div class="am-u-sm-12 am-u-lg-12">
+                <div class="site-middle am-animation-slide-top">
+                    <div class="exbot-friendlylink-title">
+                        <i class="am-icon-hashtag "></i><span>友情链接</span>
+                    </div>
+                    <div class="exbot-friendlylink-author">
+                        <div class="am-u-sm-4 am-u-lg-4">
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://www.blackant.org/" target="_blank">黑蚂蚁机器人</a>
+                            </p>
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://www.robobk.com/" target="_blank">机智机器人团队</a>
+                            </p>
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://www.diy-robots.com/" target="_blank">动力老男孩的博客</a>
+                            </p>
+                        </div>
+                        <div class="am-u-sm-4 am-u-lg-4">
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://blog.csdn.net/hcx25909" target="_blank">古月居</a>
+                            </p>
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="https://ioteams.com/mechanical/" target="_blank">机器革命</a>
+                            </p>
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://zhainan.org/" target="_blank">I'm 宅男</a>
+                            </p>
+                        </div>
+                        <div class="am-u-sm-4 am-u-lg-4">
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://www.yfworld.com/" target="_blank">云飞机器人实验室</a>
+                            </p>
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://yukunlin.com.cn/" target="_blank">我思故我在</a>
+                            </p>
+                            <p>
+                                <i class="am-icon-street-view "></i>
+                                <a href="http://www.csksoft.net/blog/" target="_blank">CSK.Blog</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
