--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,8 +56,6 @@
     <link rel="stylesheet" type="text/css" href="css/community.css">
     <link rel="stylesheet" type="text/css" href="css/project.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <!-- test -->
-    <link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
 <div class="page-layout page-main-content">
@@ -102,7 +100,7 @@
                 </div>
                 <div class="am-topbar-right writing am-hide-md-down">
                     <a  href="/editor" target="_blank" style="text-decoration: none">
-                        <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                        <img class="am-circle" src="img/writing.png">
                         <span class="write-word">写博客</span>
                     </a>
                 </div>
@@ -305,7 +303,6 @@
 
 
 <!-- Custom scripts for this template -->
-<script type="text/javascript" src="js/host.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 
 </body>
