--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ExBot易科机器人实验室 | 个人中心</title>
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/site/favicon.ico">
 
     <link href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/admin.css">
@@ -62,7 +62,7 @@
             </div>
             <div class="am-topbar-right writing am-hide-md-down">
                 <a  href="/editor" target="_blank" style="text-decoration: none">
-                    <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                    <img class="am-circle" src="img/writing.png">
                     <span class="write-word">写博客</span>
                 </a>
             </div>
@@ -81,12 +81,11 @@
                 <li class="clickLi basicSetting"><a><i class="fa fa-cog fa-lg"></i> 安全设置</a></li>
 
                 <li class="clickLi leaveMessage"><a><i class="fa fa-commenting-o fa-lg"></i> 评论留言</a></li>
-                <li class="clickLi privateWord"><a><i class="fa fa-pencil-square-o fa-lg"></i> 悄悄话</a></li>
             </ul>
             <div class="am-panel am-panel-default admin-sidebar-panel">
                 <div class="am-panel-bd">
                     <p><span class="am-icon-bookmark"></span> 公告</p>
-                    <p>时光静好，与君语；细水流年，与君同。—— 张先森</p>
+                    <p>博客目前处于初级阶段，可能存在未知bug，持续优化中，敬请谅解！</p>
                 </div>
             </div>
         </div>
@@ -95,10 +94,10 @@
     <div class="admin-content">
         <div class="userInfo">
             <div id="personalDate">
-                <div class="zhy-personalDate">
+                <div class="exbot-personalDate">
                     <div class="personalDateHeadPortrait">
                         <div class="headPortrait">
-                            <img id="headPortrait" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif"/>
+                            <img id="headPortrait" src="https://exbot-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif"/>
                         </div>
                         <div class="headChange">
                             <div class="headPortraitChange">
@@ -159,7 +158,7 @@
                 </div>
             </div>
             <div id="basicSetting">
-                <div class="zhy-basicSetting">
+                <div class="exbot-basicSetting">
                     <form id="basicSettingForm">
                         <div class="phoneTable">
                             <label for="phone">手机</label>
@@ -187,7 +186,7 @@
                 </div>
             </div>
             <div id="leaveMessage">
-                <div class="zhy-leaveMessage">
+                <div class="exbot-leaveMessage">
 
                     <div class="am-tabs  am-animation-slide-left" data-am-tabs="{noSwipe: 1}" id="doc-tab-demo-1">
                         <ul class="am-tabs-nav am-nav am-nav-tabs" style="padding-left: 0">
@@ -215,7 +214,7 @@
             </div>
             </div>
             <div id="privateWord">
-                <div class="zhy-privateWord">
+                <div class="exbot-privateWord">
                     <div class="zhangSay  am-animation-slide-top">
                         <span class="word">生命中有一些人与我们擦肩了，却来不及遇见</span>
                         <span class="word">遇见了，却来不及相识</span>
