--- a/src/main/resources/static/css/friendlylink.css
+++ b/src/main/resources/static/css/friendlylink.css
@@ -10,11 +10,11 @@
         margin: 30px 16%;
         text-align: left;
     }
-    .zhy-link-word{
+    .exbot-link-word{
         margin: 30px 16%;
         text-align: left;
     }
-    .zhy-official-weixin img{
+    .exbot-official-weixin img{
         width: 130px;
         margin: 0 20%;
     }
@@ -28,53 +28,53 @@
         margin: 20px 5%;
         text-align: left;
     }
-    .zhy-link-word{
+    .exbot-link-word{
         margin: 20px 5%;
         text-align: left;
     }
-    .zhy-official-weixin img{
+    .exbot-official-weixin img{
         width: 73.1667px;
         margin: 0 20%;
     }
 }
-.zhy-friendlylink-title i{
+.exbot-friendlylink-title i{
     color: dodgerblue;
 }
-.zhy-friendlylink-title span{
+.exbot-friendlylink-title span{
     color: #999999;
     font-size: 20px;
     margin: 5px;
 }
-.zhy-friendlylink-author{
+.exbot-friendlylink-author{
     margin: 20px 20px;
 }
-.site-inner .zhy-friendlylink-author i{
+.site-inner .exbot-friendlylink-author i{
     color: red;
 }
-.zhy-friendlylink-author a{
+.exbot-friendlylink-author a{
     margin: 5px;
     text-decoration: none;
     cursor: pointer;
 }
-.zhy-friendlylink-author p{
+.exbot-friendlylink-author p{
     margin-top: 20px;
 }
-.site-middle .zhy-friendlylink-author i{
+.site-middle .exbot-friendlylink-author i{
     color: #61804E;
 }
-.zhy-friendlylink-words{
+.exbot-friendlylink-words{
     padding: 27px;
     font-weight: 600;
 }
-.zhy-friendlylink-words blockquote ul li{
+.exbot-friendlylink-words blockquote ul li{
     font-size: 17px;
     font-family: Georgia,"Times New Roman",Times,Kai,"Kaiti SC",KaiTi,BiauKai,FontAwesome,serif;
     color: #4d4d4d;
 }
-.zhy-official-weixin{
+.exbot-official-weixin{
     text-align: center;
 }
-.zhy-weixin-row{
+.exbot-weixin-row{
     margin-left:40px;
     width: 33.3%;
     /*display: inline-block;*/
@@ -83,19 +83,19 @@
     flex-direction: column;
     align-items: center
 }
-.zhy-official-weixin p{
+.exbot-official-weixin p{
     margin-top: 20px;
     color: dodgerblue;
     font-family: 仿宋;
 }
-.zhy-official-weixin span{
+.exbot-official-weixin span{
     margin-top: 10px;
     color: #1b6d85;
     font-size: 12px;
     font-family: 仿宋;
 }
 
-.zhy-friendlink-info p{
+.exbot-friendlink-info p{
     margin: 22px 25px;
     text-indent: 2em;
     line-height: 23px;
