--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="am-topbar-right writing am-hide-md-down">
                         <a  href="/editor" target="_blank" style="text-decoration: none">
-                            <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                            <img class="am-circle" src="img/writing.png">
                             <span class="write-word">写博客</span>
                         </a>
                     </div>
@@ -65,13 +65,13 @@
             </div>
         </div>
         <div id="writeArticle">
-            <div class="zhy-editor">
-                <div class="zhy-editor-input">
-                    <input id="zhy-editor-title" type="text" placeholder="输入文章标题">
+            <div class="exbot-editor">
+                <div class="exbot-editor-input">
+                    <input id="exbot-editor-title" type="text" placeholder="输入文章标题">
                     <button type="button" class="publishBtn am-btn am-btn-danger">发布博客</button>
                 </div>
             </div>
-            <div class="zhy-editor-writing">
+            <div class="exbot-editor-writing">
                 <!--MarkDown的id标志 -->
                 <div id="my-editormd">
                     <!-- 书写与实时显示的textarea -->
@@ -148,7 +148,13 @@
                             <span class="required">*</span>
                         </div>
 
-                        <div id="originalAuthorHide" style="display: inline-block">
+                        <label class="publish-img" style="margin-left: 10px">博客图片<strong>:</strong></label>
+                        <div class="imgUrls">
+                            <input id="select-imgUrls" />
+                            <span class="required">*</span>
+                        </div>
+
+                        <div id="originalAuthorHide">
                             <label class="publish-tag" style="margin-left: 10px;display: inline-block">文章作者<strong>:</strong></label>
                             <div class="originalAuthor" style="display: inline-block">
                                 <input type="text" id="originalAuthor" placeholder="请输入文章原作者">
