--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="am-topbar-right writing am-hide-md-down">
                     <a  href="/editor" target="_blank" style="text-decoration: none">
-                        <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                        <img class="am-circle" src="img/writing.png">
                         <span class="write-word">写博客</span>
                     </a>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="am-u-sm-12 am-u-lg-12">
                     <div class="content">
                         <div class="article">
-                                <div class="zhy-article-top">
+                                <div class="exbot-article-top">
                                     <div style="height: 500px">
 
                                     </div>
@@ -103,7 +103,7 @@
                                         <textarea style="display:none;" name="editormd-markdown-doc" id="mdText"></textarea>
                                     </div>
                                 </div>
-                                <div class="zhy-article-footer">
+                                <div class="exbot-article-footer">
                                 </div>
                                 <div class="other">
 
