--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="am-topbar-right writing am-hide-md-down">
                     <a  href="/editor" target="_blank" style="text-decoration: none">
-                        <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                        <img class="am-circle" src="img/writing.png">
                         <span class="write-word">写博客</span>
                     </a>
                 </div>
