--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -233,38 +233,28 @@
         </div>
     </div>
 
-</div>
-</div>
-</div>
-
-
-
 <!-- 项目 -->
-<!--<div class="projects">
-    <h2 class="title">项目</h2>
-
-    <div class="div_projects_container">
-        <ul id="ul_projects">
-
-        </ul>
+    <div class="exbot-index-project">
+        <hr class="half-rule">
+        <div class="module-wrap" style="text-align: center">
+            <div class="div-inline">
+                <embed src="http://player.youku.com/player.php/sid/XMzQ1Mjg1NTc4OA==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+            </div>
+            <div class="div-inline">
+                <embed src="http://player.youku.com/player.php/sid/XMjUyNzQ2MTQxMg==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+            </div>
+            <div class="div-inline">
+                <embed src="http://player.youku.com/player.php/sid/XMTUxODYzNzk2OA==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+            </div>
+            <div class="div-inline">
+                <embed src="http://player.youku.com/player.php/sid/XMTU1MTc5NDA5Mg==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+            </div>
+        </div>
+        <hr class="half-rule">
     </div>
-</div>-->
-    <!-- 点击图片向左移动 -->
-    <!-- <div class="slide-btn-panel left-btn">
-       <div class="btn-bg"></div>
-       <button class="slide-btn left-btn" id="left-btn">
-         <i class="icon-arrow-left"></i>
-       </button>
-     </div>-->
-    <!-- 点击图片向右移动 -->
-    <!--<div class="slide-btn-panel right-btn">
-    <div class="btn-bg"></div>
-      <button class="slide-btn right-btn" id="right-btn">
-        <i class="icon-arrow-right"></i>
-      </button>
-    </div>-->
-
+</div>
 <!-- 页脚 -->
+<div>
 <div id="footerPage" class="footer">
     <div class="exbot-common-footer-2017">
         <div class="module-wrap">
