fix some bugs and update

--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -58,7 +58,7 @@
 .exbot-index-all-book .module-wrap .exbot-book-layer .exbot-book-tabs .exbot-book-tab
 	{
 	float: left;
-	padding: 15px 39px;
+	padding: 1% 4.6%;
 	width: 20%;
 	box-sizing: border-box
 }
