--- a/src/main/resources/templates/friendlylink.html
+++ b/src/main/resources/templates/friendlylink.html
@@ -87,18 +87,25 @@
                             </p>
                             <p>
                                 <i class="am-icon-street-view "></i>
+                                <a href="https://www.corvin.cn/" target="_blank">ROS小课堂</a>
+                            </p>
+                            <!--
+                            <p>
+                                <i class="am-icon-street-view "></i>
                                 <a href="http://www.robobk.com/" target="_blank">机智机器人团队</a>
                             </p>
                             <p>
                                 <i class="am-icon-street-view "></i>
                                 <a href="http://www.diy-robots.com/" target="_blank">动力老男孩的博客</a>
                             </p>
+                            -->
                         </div>
                         <div class="am-u-sm-4 am-u-lg-4">
                             <p>
                                 <i class="am-icon-street-view "></i>
                                 <a href="http://blog.csdn.net/hcx25909" target="_blank">古月居</a>
                             </p>
+                            <!--
                             <p>
                                 <i class="am-icon-street-view "></i>
                                 <a href="https://ioteams.com/mechanical/" target="_blank">机器革命</a>
@@ -107,12 +114,14 @@
                                 <i class="am-icon-street-view "></i>
                                 <a href="http://zhainan.org/" target="_blank">I'm 宅男</a>
                             </p>
+                            -->
                         </div>
                         <div class="am-u-sm-4 am-u-lg-4">
                             <p>
                                 <i class="am-icon-street-view "></i>
                                 <a href="http://www.yfworld.com/" target="_blank">云飞机器人实验室</a>
                             </p>
+                            <!--
                             <p>
                                 <i class="am-icon-street-view "></i>
                                 <a href="http://yukunlin.com.cn/" target="_blank">我思故我在</a>
@@ -121,6 +130,7 @@
                                 <i class="am-icon-street-view "></i>
                                 <a href="http://www.csksoft.net/blog/" target="_blank">CSK.Blog</a>
                             </p>
+                            -->
                         </div>
                     </div>
                 </div>
