--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -182,8 +182,8 @@
             <div class="exbot-book-layer">
                 <ul class="exbot-book-tabs" id="ul_book_recommend">
                     <li class="exbot-book-tab"><a id="book" onclick="show(this)" href="javascript:bookInfo(180)">
-                        <div><img class="exbot-book-icon" src="img/books/book_1.jpg" alt="机器人操作系统浅析"></div>
-                        <div class="exbot-book-name">机器人操作系统浅析</div>
+                        <div><img class="exbot-book-icon" src="img/books/book_1.jpg" alt="ROS机器人编程：原理与应用"></div>
+                        <div class="exbot-book-name">ROS机器人编程：原理与应用</div>
                     </a></li>
                     <li class="exbot-book-tab"><a id="book" onclick="show(this)" href="javascript:bookInfo(181)">
                         <div><img class="exbot-book-icon" src="img/books/book_2.jpg" alt="嵌入式机器人学"></div>
@@ -261,16 +261,20 @@
         <hr class="half-rule">
         <div class="module-wrap" style="text-align: center">
             <div class="div-inline">
-                <embed src="http://player.youku.com/player.php/sid/XMzQ1Mjg1NTc4OA==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+                <iframe width="240" height="200" src="//player.bilibili.com/player.html?aid=66255010&cid=114914345&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                <!-- <embed src="http://player.youku.com/player.php/sid/XMzQ1Mjg1NTc4OA==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" > -->
             </div>
             <div class="div-inline">
-                <embed src="http://player.youku.com/player.php/sid/XMjUyNzQ2MTQxMg==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+                <iframe width="240" height="200" src="//player.bilibili.com/player.html?aid=66254935&cid=114914009&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                <!-- <embed src="http://player.youku.com/player.php/sid/XMjUyNzQ2MTQxMg==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" > -->
             </div>
             <div class="div-inline">
-                <embed src="http://player.youku.com/player.php/sid/XMTUxODYzNzk2OA==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+                <iframe width="240" height="200" src="//player.bilibili.com/player.html?aid=66255128&cid=114914437&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                <!-- <embed src="http://player.youku.com/player.php/sid/XMTUxODYzNzk2OA==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" > -->
             </div>
             <div class="div-inline">
-                <embed src="http://player.youku.com/player.php/sid/XMTU1MTc5NDA5Mg==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" >
+                <iframe width="240" height="200" src="//player.bilibili.com/player.html?aid=66255195&cid=114914717&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                <!-- <embed src="http://player.youku.com/player.php/sid/XMTU1MTc5NDA5Mg==/v.swf" allowfullscreen="true" quality="high" width="240" height="200" align="middle" allowscriptaccess="always" type="application/x-shockwave-flash" > -->
             </div>
         </div>
         <hr class="half-rule">
@@ -286,14 +290,15 @@
                     <div class="y-row copyright">
                         <p class="link-wrap">
                             <a class="link-item" href="http://www.blackant.org/" target="_blank">黑蚂蚁机器人</a>
-                            <a class="link-item" href="http://www.robobk.com/" target="_blank">机智机器人团队</a>
-                            <a class="link-item" href="http://www.diy-robots.com/" rel="colleague" target="_blank">动力老男孩的博客</a>
+                            <!-- <a class="link-item" href="http://www.robobk.com/" target="_blank">机智机器人团队</a>
+                            <a class="link-item" href="http://www.diy-robots.com/" rel="colleague" target="_blank">动力老男孩的博客</a> -->
                             <a class="link-item" href="http://blog.csdn.net/hcx25909" rel="friend" target="_blank">古月居</a>
-                            <a class="link-item" href="https://ioteams.com/mechanical">机器革命</a>
-                            <a class="link-item" href="http://zhainan.org/" rel="contact" target="_blank">I'm 宅男</a>
+                            <!-- <a class="link-item" href="https://ioteams.com/mechanical">机器革命</a>
+                            <a class="link-item" href="http://zhainan.org/" rel="contact" target="_blank">I'm 宅男</a> -->
                             <a class="link-item" href="http://www.yfworld.com/" rel="colleague" target="_blank">云飞机器人实验室</a>
-                            <a class="link-item" href="http://yukunlin.com.cn/">我思故我在</a>
-                            <a class="link-item" href="http://www.csksoft.net/blog/" rel="colleague" target="_blank">CSK.Blog</a>
+                            <a class="link-item" href="https://www.corvin.cn/" rel="colleague" target="_blank">ROS小课堂</a>
+                            <!-- <a class="link-item" href="http://yukunlin.com.cn/">我思故我在</a>
+                            <a class="link-item" href="http://www.csksoft.net/blog/" rel="colleague" target="_blank">CSK.Blog</a> -->
                             <a class="link-item" href="http://blog.exbot.net/link" title="友情链接">更多链接</a>
                         </p>
                         <p id="copyright" class="copyright">
